[package]
edition      = "2024"
name         = "esplay-rust"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "esplay-rust"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

critical-section = "1.2.0"
esp-alloc        = "0.9.0"

# Display libraries needed for the ILI9341 LCD on ESPlay Micro v2
mipidsi = "0.9.0"                # Driver for MIPI DCS displays (like ILI9341)
embedded-graphics = "0.8.1"      # Graphics primitives and color types
embedded-hal = "1.0.0"           # Hardware abstraction layer traits
embedded-hal-bus = "0.3.0"       # SPI device wrapper for shared bus


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
